fix text alignment issue

--- a/src/components/card.css
+++ b/src/components/card.css
@@ -11,6 +11,7 @@
 .cardFeatureHeaderText {
     color: gold;
     font-size: 2.3rem;
+    text-align: center;
 }
 
 .cardFeature {
